--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,24 @@
 <html>
 <head>
   <title>MEAN hotel</title>
+  <link href="css/bootstrap.min.css" rel="stylesheet" />
+  <link href="css/custom.css" rel="stylesheet" />
 </head>
 <body>
   <h1>Mean hotel homepage</h1>
+
+  <footer class="footer">
+    <div class="container">
+      <p class="text-muted text-center">
+        <a href="http://fullstacktraining.com" target="_blank"><img src="/images/fullstacktraining_logo.png" height="26" alt="Full Stack Training"/></a>
+      </p>
+
+      <p class="text-muted text-center">
+        <small>&copy; 2015 Full Stack Training Ltd</small>
+      </p>
+    </div>
+  </footer>
+
+  <script src="jquery/jquery-3.2.1.min.js"></script>
 </body>
 </html>
