--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html ng-app=meanhotel>
 <head>
   <title>MEAN hotel</title>
   <link href="css/bootstrap.min.css" rel="stylesheet" />
   <link href="css/custom.css" rel="stylesheet" />
 </head>
 <body>
-  <h1>Mean hotel homepage</h1>
+
+  <div ng-view></div>
 
   <footer class="footer">
     <div class="container">
@@ -21,5 +22,8 @@
   </footer>
 
   <script src="jquery/jquery-3.2.1.min.js"></script>
+  <script src="node_modules/angular/angular.js"></script>
+  <script src="node_modules/angular-route/angular-route.js"></script>
+  <script src="angular-app/app.js"></script>
 </body>
 </html>
