--- a/public/index.html
+++ b/public/index.html
@@ -25,5 +25,6 @@
   <script src="node_modules/angular/angular.js"></script>
   <script src="node_modules/angular-route/angular-route.js"></script>
   <script src="angular-app/app.js"></script>
+  <script src="angular-app/hotel-list/hotel-list-controller.js"></script>
 </body>
 </html>
