--- a/public/index.html
+++ b/public/index.html
@@ -26,5 +26,8 @@
   <script src="node_modules/angular-route/angular-route.js"></script>
   <script src="angular-app/app.js"></script>
   <script src="angular-app/hotel-list/hotel-list-controller.js"></script>
+  <script src="angular-app/hotel-display/hotel-display-controller.js"></script>
+  <script src="angular-app/hotel-data-factory/hotel-data-factory.js"></script>
+
 </body>
 </html>
