--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
   <title>MEAN hotel</title>
   <link href="css/bootstrap.min.css" rel="stylesheet" />
   <link href="css/custom.css" rel="stylesheet" />
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 </head>
 <body>
 
@@ -28,6 +29,7 @@
   <script src="angular-app/hotel-list/hotel-list-controller.js"></script>
   <script src="angular-app/hotel-display/hotel-display-controller.js"></script>
   <script src="angular-app/hotel-data-factory/hotel-data-factory.js"></script>
+  <script src="angular-app/hotel-rating/hotel-rating-directive.js"></script>
 
 </body>
 </html>
