--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,6 @@
   <script src="angular-app/hotel-display/hotel-display-controller.js"></script>
   <script src="angular-app/hotel-data-factory/hotel-data-factory.js"></script>
   <script src="angular-app/hotel-rating/hotel-rating-directive.js"></script>
-
+  <script src="angular-app/register/register-controller.js"></script>
 </body>
 </html>
