--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,11 @@
 </head>
 <body>
 
-  <div ng-view></div>
+  <mh-navigation></mh-navigation>
+
+  <div class="container">
+    <div ng-view></div>
+  </div>
 
   <footer class="footer">
     <div class="container">
@@ -25,11 +29,16 @@
   <script src="jquery/jquery-3.2.1.min.js"></script>
   <script src="node_modules/angular/angular.js"></script>
   <script src="node_modules/angular-route/angular-route.js"></script>
+  <script src="node_modules/angular-jwt/dist/angular-jwt.js"></script>
   <script src="angular-app/app.js"></script>
   <script src="angular-app/hotel-list/hotel-list-controller.js"></script>
   <script src="angular-app/hotel-display/hotel-display-controller.js"></script>
   <script src="angular-app/hotel-data-factory/hotel-data-factory.js"></script>
   <script src="angular-app/hotel-rating/hotel-rating-directive.js"></script>
   <script src="angular-app/register/register-controller.js"></script>
+  <script src='angular-app/navigation-directive/navigation-directive.js'></script>
+  <script src='angular-app/login/login-controller.js'></script>
+  <script src="angular-app/auth/auth-factory.js"></script>
+  <script src="angular-app/auth/auth-interceptor.js"></script>
 </body>
 </html>
